resources/css/main.css
/* ... */
.new-header__top .new-header__left ul li ul li {
  margin-bottom: 10px;
}
.new-header__top .new-header__left ul li ul li a {
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.4444444444;
  font-family: "Nunito Sans", sans-serif;
  color: #3e3e3e;
  text-decoration: none;
  display: block;
}
.new-header__top .new-header__left ul li ul li:last-child {
  margin-bottom: 0;
}
.new-header__top .new-header__left ul li:hover ul {
  opacity: 1;
  visibility: visible;
}
.new-header__top .new-header__right {
  display: flex;
}
.new-header__top .new-header__phones ul {
  margin: 0 -9px;
  display: flex;
}
.new-header__top .new-header__phones ul li {
  list-style: none;
  padding: 0 9px;
  position: relative;
}
.new-header__top .new-header__phones ul li a {
  display: flex;
  align-items: center;
  font-weight: 700;
  font-size: 1.6rem;
  line-height: 1.5;
  font-family: "Nunito Sans", sans-serif;
  color: #9ba1b9;
  text-decoration: none;
}
.new-header__top .new-header__phones ul li a svg {
  margin-right: 10px;
}
.new-header__top .new-header__language {
  margin-left: 60px;
}
.new-header__top .new-header__language ul li {
  list-style: none;
  position: relative;
}
.new-header__top .new-header__language ul li a {
  display: flex;
  align-items: center;
  font-weight: 700;
  font-size: 1.6rem;
  line-height: 1.5;
  font-family: "Nunito Sans", sans-serif;
  color: #9ba1b9;
  text-decoration: none;
}
.new-header__top .new-header__language ul li a svg {
  margin-right: 10px;
}
.new-header__top .new-header__language ul li ol {
  padding: 23px 17.5px;
  border-radius: 16px;
  background-color: #fff;
  position: absolute;
  top: 50px;
  left: 0;
  opacity: 0;
  visibility: hidden;
  transition: 250ms;
  flex-direction: column;
  box-shadow:
    0 40px 88px 0 rgba(35, 58, 105, 0.1019607843),
    0 160px 160px 0 rgba(35, 58, 105, 0.0901960784),
    0 361px 217px 0 rgba(35, 58, 105, 0.0509803922),
    0 642px 250px 0 rgba(35, 58, 105, 0.0117647059),
    0 1003px 250px 0 rgba(35, 58, 105, 0);
}
.new-header__top .new-header__language ul li ol:after {
  content: "";
  position: absolute;
  top: -30px;
  left: 0;
  width: 100%;
  height: 30px;
}
.new-header__top .new-header__language ul li ol::before {
  content: "";
  position: absolute;
  top: -10px;
  left: 40px;
  width: 37px;
  height: 37px;
  background-color: #fefefe;
  border-radius: 8px;
  transform: rotate(45deg);
  box-shadow:
    0 40px 88px 0 rgba(35, 58, 105, 0.1019607843),
    0 160px 160px 0 rgba(35, 58, 105, 0.0901960784),
    0 361px 217px 0 rgba(35, 58, 105, 0.0509803922),
    0 642px 250px 0 rgba(35, 58, 105, 0.0117647059),
    0 1003px 250px 0 rgba(35, 58, 105, 0);
}
.new-header__top .new-header__language ul li ol li {
  margin-bottom: 10px;
}
.new-header__top .new-header__language ul li ol li a {
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.4444444444;
  font-family: "Nunito Sans", sans-serif;
  color: #3e3e3e;
  text-decoration: none;
  display: block;
}
.new-header__top .new-header__language ul li ol li:last-child {
  margin-bottom: 0;
}
.new-header__top .new-header__language ul li.open ol {
  opacity: 1;
  visibility: visible;
}
.new-header__bottom .new-header__col {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 16px;
  padding-bottom: 16px;
}
.new-header__bottom .new-header__left {
  display: flex;
  align-items: center;
}
.new-header__bottom .new-header__left .new-header__logo {
  margin-right: 60px;
}
.new-header__bottom .new-header__left .new-header__logo a {
  text-decoration: none;
}
.new-header__bottom .new-header__left .new-header__menu > ul {
  margin: 0 -18px;
  display: flex;
}
.new-header__bottom .new-header__left .new-header__menu > ul > li {
  list-style: none;
  padding: 0 18px;
  position: relative;
}
.new-header__bottom .new-header__left .new-header__menu > ul > li > a {
  font-weight: 600;
  font-size: 1.6rem;
  line-height: 1.5;
  font-family: "Nunito Sans", sans-serif;
  color: #3e3e3e;
  text-decoration: none;
  transition: color 250ms;
}
.new-header__bottom .new-header__left .new-header__menu > ul > li > a:hover {
  color: #e60000;
}
.new-header__bottom
  .new-header__left
  .new-header__menu
  > ul
  > li:hover
  .new-header__menu-dropdown {
  transform: translateY(45px) translateX(-180px);
  opacity: 1;
  visibility: visible;
}

.new-header__bottom .new-header__right .new-header__buttons ul {
  margin: 0 -10px;
  display: flex;
}
.new-header__bottom .new-header__right .new-header__buttons ul li {
  list-style: none;
  padding: 0 10px;
}
.new-header__bottom .new-header__burger {
  display: none;
}
.new-header__bottom .new-header__menu-dropdown {
  min-width: 1050px;
  position: absolute;
  top: 100%;
  left: 0;
  background-color: #fff;
  border-radius: 24px;
  padding: 20px;

  box-shadow:
    0 54px 22px rgba(23, 58, 105, 0.01),
    0 30px 18px rgba(23, 58, 105, 0.03),
    0 14px 14px rgba(23, 58, 105, 0.04),
    0 3px 7px rgba(23, 58, 105, 0.05);

  transform: translateY(140px) translateX(-180px);
  opacity: 0;
  visibility: hidden;

  will-change: transform, opacity;
  transition: 150ms;
}
.new-header__bottom .new-header__menu-dropdown:after {
  content: "";
  position: absolute;
  top: -50px;
  left: 0;
  width: 100%;
  height: 50px;
}
.new-header__bottom .new-header__menu-dropdown::before {
  content: "";
  position: absolute;
  top: -10px;
  left: 260px;
  width: 37px;
  height: 37px;
  background-color: #fefefe;
  border-radius: 8px;
  transform: rotate(45deg);
  box-shadow:
    0 40px 88px 0 rgba(35, 58, 105, 0.1019607843),
    0 160px 160px 0 rgba(35, 58, 105, 0.0901960784),
    0 361px 217px 0 rgba(35, 58, 105, 0.0509803922),
    0 642px 250px 0 rgba(35, 58, 105, 0.0117647059),
    0 1003px 250px 0 rgba(35, 58, 105, 0);
}
.new-header__bottom .new-header__menu-dropdown-wrapper {
  display: flex;
  flex-wrap: wrap;
  margin-right: -1.5rem;
  margin-left: -1.5rem;
  position: relative;
}
/* ... */

